# analytics-village

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
challenges/ch01/: README.md  brief.md  ch01_analytics.ipynb  ch01_normalized.ipynb  ch01_star.ipynb  questions.json  schema.json
challenges/ch01/student/: challenge.py  db.py  submission.py
data/ep01/: brief.md  village.db
episodes/ep01/: README.md  brief.md  schema.json
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: Layout.jsx  TileGrid.jsx
frontend/src/pages/: ChallengeDetail.jsx  Challenges.jsx  Dashboard.jsx  Scoreboard.jsx  Settings.jsx  Submissions.jsx
frontend/src/styles/: masonry.css
notebooks/: ch01_normalized.ipynb  ch01_open_for_business.ipynb  ch01_star.ipynb  ep01_open_for_business.ipynb
server/: __init__.py  facilitator_db.py  main.py  models.py  routes_data.py  routes_episodes.py  routes_export.py  routes_simulation.py  routes_submissions.py
simulation/: __init__.py  catalogue.py  consumer_agent.py  data_analyst.py  database.py  exporter.py  generate.py  history_runner.py  lifecycle_scanner.py  live_runner.py  llm_client.py  persona_seeder.py  physics.py  qa_generator.py  schema.py  store_agent.py  transaction_engine.py  world.py
student/: __init__.py  challenge.py  db.py  display.py  episode.py  loader.py  owner.py  submission.py
submissions/: README.md
