[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "analytics-village"
version = "0.1.0"
description = "A simulated economy for teaching real analytics"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "openai>=1.12",
    "pydantic>=2.6",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tabulate>=0.9",
    "click>=8.1",
]

[project.scripts]
village-generate = "simulation.generate:main"
village-server = "server.main:run"

[tool.setuptools.packages.find]
include = ["simulation*", "student*", "server*"]
